[gd_scene load_steps=10 format=2]

[ext_resource path="res://scn/main.gd" type="Script" id=1]
[ext_resource path="res://scn/Game.tscn" type="PackedScene" id=2]

[sub_resource type="Animation" id=6]
resource_name = "controls2options"
tracks/0/type = "value"
tracks/0/path = NodePath("controls:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("options:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=1]
resource_name = "main2options"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("main:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.001 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("options:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.001 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
resource_name = "options2controls"
tracks/0/type = "value"
tracks/0/path = NodePath("controls:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("options:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "options2main"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("options:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("main:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0.0745098, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0941176, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.0980392, 0, 0.0745098, 1 )

[node name="Main" type="Spatial"]
script = ExtResource( 1 )

[node name="Game" parent="." instance=ExtResource( 2 )]

[node name="Menu" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Transition" type="AnimationPlayer" parent="Menu"]
anims/controls2options = SubResource( 6 )
anims/main2options = SubResource( 1 )
anims/options2controls = SubResource( 5 )
anims/options2main = SubResource( 2 )

[node name="main" type="Panel" parent="Menu"]
margin_right = 1024.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 3 )

[node name="play" type="Button" parent="Menu/main"]
margin_left = 440.0
margin_top = 150.0
margin_right = 478.0
margin_bottom = 170.0
rect_scale = Vector2( 4, 4 )
text = "Play"

[node name="options" type="Button" parent="Menu/main"]
margin_left = 390.0
margin_top = 350.0
margin_right = 453.0
margin_bottom = 370.0
rect_scale = Vector2( 4, 4 )
text = "Options"

[node name="quit" type="Button" parent="Menu/main"]
margin_left = 390.0
margin_top = 460.0
margin_right = 453.0
margin_bottom = 480.0
rect_scale = Vector2( 4, 4 )
text = "Quit"

[node name="options" type="Panel" parent="Menu"]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 4 )

[node name="return" type="Button" parent="Menu/options"]
margin_left = 42.5805
margin_top = 482.658
margin_right = 105.581
margin_bottom = 502.658
rect_scale = Vector2( 4, 4 )
text = "Return"

[node name="controls" type="Button" parent="Menu/options"]
margin_left = 390.0
margin_top = 351.746
margin_right = 455.0
margin_bottom = 371.746
rect_scale = Vector2( 4, 4 )
text = "Controls"

[node name="controls" type="Panel" parent="Menu"]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 7 )

[node name="return" type="Button" parent="Menu/controls"]
margin_left = 42.5805
margin_top = 482.658
margin_right = 105.581
margin_bottom = 502.658
rect_scale = Vector2( 4, 4 )
text = "Return"

[node name="temp" type="Panel" parent="Menu"]
visible = false
margin_right = 1024.0
margin_bottom = 600.0

[connection signal="game_over" from="Game" to="." method="_on_game_over"]
[connection signal="pressed" from="Menu/main/play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Menu/main/options" to="Menu/Transition" method="play" binds= [ "main2options" ]]
[connection signal="pressed" from="Menu/main/quit" to="." method="quit"]
[connection signal="pressed" from="Menu/options/return" to="Menu/Transition" method="play" binds= [ "options2main" ]]
[connection signal="pressed" from="Menu/options/controls" to="Menu/Transition" method="play" binds= [ "options2controls" ]]
[connection signal="pressed" from="Menu/controls/return" to="Menu/Transition" method="play" binds= [ "controls2options" ]]
